--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -3,6 +3,9 @@ Jinja2==2.7.2
 MarkupSafe==0.19
 Shapely==1.3.0
 Werkzeug==0.9.4
+geocoder==0.4.7
 geopy==0.98.3
+haversine==0.1
 itsdangerous==0.23
+requests==2.2.1
 wsgiref==0.1.2
